[tool.poetry]
name = "mariner"
version = "0.2.0"
description = "Web application for controlling MSLA 3D Printers based on ChiTu controllers"
license = "MIT"
readme = "README.rst"
authors = [
  "Luiz Ribeiro <luizribeiro@gmail.com>",
]

[tool.poetry.scripts]
mariner = 'mariner.server:main'

[tool.poetry.dependencies]
flask = "2.1.3"
Werkzeug = "2.0.3"
flask-caching = "1.10.1"
Flask-WTF = "0.15.1"
pypng = "0.20220715.0"
pyre-extensions = "0.0.32"
pyserial = "3.5"
python = "^3.12"
toml = "0.10.2"
typedstruct = "0.1.0"
waitress = "2.1.2"
whitenoise = "5.2.0"

[tool.poetry.group.dev.dependencies]
black = "25.12.0"
flake8 = "7.3.0"
freezegun = "1.5.5"
green = "4.0.0"
pyexpect = "1.0.22"
pyfakefs = "6.0.0"
pyre-check = "0.9.15"
python-language-server = "0.36.2"
sphinx = "4.0.3"
sphinx-rtd-theme = "1.3.0"

[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"
