[tool.poetry]
name = "mariner"
version = "0.2.0"
description = "Web application for controlling MSLA 3D Printers based on ChiTu controllers"
license = "MIT"
readme = "README.rst"
authors = [
  "Luiz Ribeiro <luizribeiro@gmail.com>",
]

[tool.poetry.scripts]
mariner = "mariner.server:main"

[tool.poetry.dependencies]
python = "^3.12"

# Flask 2.3 stack (keep consistent)
flask = "2.3.3"
Werkzeug = "2.3.8"
jinja2 = "3.1.6"
itsdangerous = "2.2.0"
click = "8.1.8"

# Extensions compatible with Flask 2.3
flask-caching = "2.1.0"
Flask-WTF = "1.1.1"
whitenoise = "6.6.0"

# Project deps
pypng = "0.20220715.0"
pyre-extensions = "0.0.32"
pyserial = "3.5"
toml = "0.10.2"
typedstruct = "0.1.0"
waitress = "2.1.2"

[tool.poetry.group.dev.dependencies]
black = "26.1.0"
flake8 = "7.3.0"
freezegun = "1.5.5"
green = "4.0.0"
pyexpect = "1.0.22"
pyfakefs = "6.0.0"
pyre-check = "0.9.25"
python-language-server = "0.36.2"
sphinx = "8.2.3"
sphinx-rtd-theme = "3.0.2"

[build-system]
requires = ["poetry>=1.0.10"]
build-backend = "poetry.masonry.api"
